@@ -1,46 +1,0 @@
-#
-# nxScripts - Scripts by neoxed.
-# Copyright (c) 2004-2005 neoxed
-#
-# Module Name:
-#   Init
-#
-# Author:
-#   neoxed (neoxed@gmail.com)
-#
-# Abstract:
-#   Implements a configuration and extension loader.
-#
-
-set TclFiles {
-  {../scripts/nxAutoNuke-ioA/nxAutoNuke.cfg}
-  {../scripts/nxLib.tcl}
-}
-
-set LibFiles {
-  {nxHelper.dll}
-}
-
-######################################################################
-
-proc nxLoadError {type message} {
-    if {![catch {set handle [open "../logs/nxError.log" a]}]} {
-        set now [clock format [clock seconds] -format "%m-%d-%Y %H:%M:%S"]
-        puts $handle "$now - [format %-12s $type] : $message"
-        close $handle
-    }
-}
-
-foreach filePath $TclFiles {
-    set filePath [file normalize $filePath]
-    if {[catch {source $filePath} error]} {
-        nxLoadError LoadScript "unable to source \"$filePath\": $error"
-    }
-}
-
-foreach filePath $LibFiles {
-    set filePath [file normalize $filePath]
-    if {[catch {load $filePath} error]} {
-        nxLoadError LoadExtension $error
-    }
-}
