@@ -2,6 +2,9 @@
 #                         nxAutoNuke-ioA - Change Log                          #
 ################################################################################
 
+nxAutoNuke-ioA v2.3.1 (not released):
+  CHG: The init.itcl script is no longer used for loading library files.
+
 nxAutoNuke-ioA v2.3.0 (Oct 29, 2005):
   NEW: Example directory tag patterns in the readme (section 4).
   NEW: Improved error logging when incorrect settings are detected.
